remove overflow scroll which suddenly caused a display issue

--- a/app/editor/style.scss
+++ b/app/editor/style.scss
@@ -14,7 +14,7 @@ div#editor-container {
   // flex-direction: row;
   flex-direction: column;
   max-width: 50%;
-  overflow:scroll;
+  // overflow:scroll;
 }
 
 #main {
