--- a/app/tabs/style.scss
+++ b/app/tabs/style.scss
@@ -13,7 +13,7 @@
 
 #tabs {
   margin-left: 53px;
-  overflow: scroll;
+  // overflow: scroll;
 
 
   ul {
